@@ -659,9 +659,6 @@ void Client::ApplyAABonuses(uint32 aaid, uint32 slots, StatBonuses* newbon)
 			case SE_TotalHP:
 				newbon->HP += base1;
 				break;
-			case SE_StunResist:
-				newbon->StunResist += base1;
-				break;
 		}
 	}
 
